# gpt-commit

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
gpt_commit/: __init__.py  cli.py  generator.py
scripts/: release.sh
