[project]
name = "gpt-commit"
version = "0.1.0"
description = "Generate commit messages using GPT models"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Puneet Kakkar", email = "pkakkar996@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "commit", "gpt", "ollama", "llm", "ai"]
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "requests>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/puneetkakkar/gpt-commit"
Repository = "https://github.com/puneetkakkar/gpt-commit.git"
Issues = "https://github.com/puneetkakkar/gpt-commit/issues"

[project.scripts]
gpt-commit = "gpt_commit.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gpt_commit"]

[tool.setuptools.package-data]
"gpt_commit" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
